--- a/admin/src/i18n/de.json
+++ b/admin/src/i18n/de.json
@@ -1,5 +1,4 @@
 {
 	"home_controller_backend adapter settings": "Adaptereinstellungen für home_controller_backend",
-	"option1": "Option1",
-	"option2": "Option2"
+	"basePath": "Pfad zu den Device-Objekten"
 }
